pagina de contacto

--- a/proyecto_06/src/main/resources/templates/Checkin/listado.html
+++ b/proyecto_06/src/main/resources/templates/Checkin/listado.html
@@ -12,8 +12,8 @@
         <header th:replace="~{layout/plantilla :: header}"/>
         
         <section th:replace="~{checkin/fragmentos :: botonesAgregar}"/>
-        <section th:replace="~{checkin/fragmentos :: agregarCategoria}"/>
-        <section th:replace="~{checkin/fragmentos :: listadoCategorias}"/>
+        <section th:replace="~{checkin/fragmentos :: agregarCheckin}"/>
+        <section th:replace="~{checkin/fragmentos :: listadoCheckin}"/>
         
         <footer th:replace="~{layout/plantilla :: footer}"/> 
        
