--- a/proyecto_06/src/main/resources/templates/Contacto/listado.html
+++ b/proyecto_06/src/main/resources/templates/Contacto/listado.html
@@ -12,8 +12,8 @@
         <header th:replace="~{layout/plantilla :: header}"/>
         
         <section th:replace="~{contacto/fragmentos :: botonesAgregar}"/>
-        <section th:replace="~{contacto/fragmentos :: agregarCategoria}"/>
-        <section th:replace="~{contacto/fragmentos :: listadoCategorias}"/>
+        <section th:replace="~{contacto/fragmentos :: agregarContacto}"/>
+        <section th:replace="~{contacto/fragmentos :: listadoContacto}"/>
         
         <footer th:replace="~{layout/plantilla :: footer}"/> 
        
