registro de vuelos

--- a/proyecto_06/src/main/resources/templates/vuelos/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/vuelos/fragmentos.html
@@ -44,32 +44,32 @@
                               method="POST" class="was-validated" enctype="multipart/form-data">
                             <div class="modal-body">
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{vuelos.idVuelo}]]</label>
-                                    <input type="text" class="form-control" name="id_Reserva" required="true"/>
+                                    <label for="idVuelo">[[#{vuelos.idVuelo}]]</label>
+                                    <input type="text" class="form-control" name="idVuelo" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{vuelos.codigoVuelo}]]</label>
-                                    <input type="text" class="form-control" name="id_vuelo" required="true"/>
+                                    <label for="codigoVuelo">[[#{vuelos.codigoVuelo}]]</label>
+                                    <input type="text" class="form-control" name="codigoVuelo" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{vuelos.origen}]]</label>
-                                    <input type="text" class="form-control" name="id_vuelo" required="true"/>
+                                    <label for="origen">[[#{vuelos.origen}]]</label>
+                                    <input type="text" class="form-control" name="origen" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{vuelos.destino}]]</label>
-                                    <input type="text" class="form-control" name="id_vuelo" required="true"/>
+                                    <label for="destino">[[#{vuelos.destino}]]</label>
+                                    <input type="text" class="form-control" name="destino" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{vuelos.fechaSalida}]]</label>
-                                    <input type="text" class="form-control" name="id_vuelo" required="true"/>
+                                    <label for="fechaSalida">[[#{vuelos.fechaSalida}]]</label>
+                                    <input type="text" class="form-control" name="fechaSalida" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{vuelos.fechaLlegada}]]</label>
-                                    <input type="text" class="form-control" name="id_vuelo" required="true"/>
+                                    <label for="fechaLlegada">[[#{vuelos.fechaLlegada}]]</label>
+                                    <input type="text" class="form-control" name="fechaLlegada" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{vuelos.precio}]]</label>
-                                    <input type="text" class="form-control" name="id_vuelo" required="true"/>
+                                    <label for="precio">[[#{vuelos.precio}]]</label>
+                                    <input type="text" class="form-control" name="precio" required="true"/>
                                 </div>
                                
                             </div>
@@ -159,39 +159,39 @@
                                             </div>
                                             <div class="card-body">
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{vuelos.idVuelo}]]</label>
+                                                    <label for="idVuelo">[[#{vuelos.idVuelo}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="idVuelo" th:field="*{idVuelo}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{vuelos.codigoVuelo}]]</label>
+                                                    <label for="codigoVuelo">[[#{vuelos.codigoVuelo}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="codigoVuelo" th:field="*{codigoVuelo}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{vuelos.origen}]]</label>
+                                                    <label for="origen">[[#{vuelos.origen}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="origen" th:field="*{origen}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{vuelos.destino}]]</label>
+                                                    <label for="destino">[[#{vuelos.destino}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="destino" th:field="*{destino}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{vuelos.fechaSalida}]]</label>
+                                                    <label for="fechaSalida">[[#{vuelos.fechaSalida}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="fechaSalida" th:field="*{fechaSalida}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{vuelos.fechaLlegada}]]</label>
+                                                    <label for="fechaLlegada">[[#{vuelos.fechaLlegada}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="fechaLlegada" th:field="*{fechaLlegada}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
