--- a/proyecto_06/src/main/resources/templates/Contacto/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/Contacto/fragmentos.html
@@ -44,29 +44,26 @@
                               method="POST" class="was-validated" enctype="multipart/form-data">
                             <div class="modal-body">
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{contacto.idContacto}]]</label>
-                                    <input type="text" class="form-control" name="id_contacto" required="true"/>
+                                    <label for="idContacto">[[#{contacto.idContacto}]]</label>
+                                    <input type="text" class="form-control" name="idContacto" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{contacto.nombre}]]</label>
-                                    <input type="text" class="form-control" name="id_contacto" required="true"/>
+                                    <label for="nombre">[[#{contacto.nombre}]]</label>
+                                    <input type="text" class="form-control" name="nombre" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{contacto.segundoNombre}]]</label>
-                                    <input type="text" class="form-control" name="id_contacto" required="true"/>
+                                    <label for="apellido">[[#{contacto.apellido}]]</label>
+                                    <input type="text" class="form-control" name="apellido" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{contacto.email}]]</label>
-                                    <input type="text" class="form-control" name="id_contacto" required="true"/>
+                                    <label for="email">[[#{contacto.email}]]</label>
+                                    <input type="text" class="form-control" name="email" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{contacto.mensaje}]]</label>
-                                    <input type="text" class="form-control" name="id_contacto" required="true"/>
+                                    <label for="mensaje">[[#{contacto.mensaje}]]</label>
+                                    <input type="text" class="form-control" name="mensaje" required="true"/>
                                 </div>
-                                <div class="mb-3">
-                                    <label for="activo">[[#{contacto.activo}]]</label>
-                                    <input class="form-check-input" type="checkbox" name="activo" id="activo"/>
-                                </div>
+                               
                             </div>
                             <div class="modal-footer">
                                 <button class="btn btn-primary" type="submit">Guardar</button>
@@ -78,7 +75,7 @@
         </section>
 
         <!-- 3 Sección principal para mostrar la informaccion de la entidad contacto -->
-        <section th:fragment="listadoContacto" id="reservas">
+        <section th:fragment="listadoContacto" id="contacto">
             <div class="container">
                 <div class="row">
                     <div class="col-md-9">
@@ -86,23 +83,27 @@
                             <div class="card-header">
                                 <h4>[[#{contacto.listado}]]</h4>
                             </div>
-                            <div th:if="${contactos != null and !contactos.empty}">
+                            <div th:if="${contacto != null and !contacto.empty}">
                                 <table class="table table-striped table-hover">
                                     <thead class="table-dark">
                                         <tr><th>#</th>
                                             <th>[[#{contacto.idContacto}]]</th>
                                             <th>[[#{contacto.nombre}]]</th>
-                                            <th>[[#{contacto.segundoNombre}]]</th>
+                                            <th>[[#{contacto.apellido}]]</th>
                                             <th>[[#{contacto.email}]]</th>
                                             <th>[[#{contacto.mensaje}]]</th>
 
                                             <th></th></tr>
                                     </thead>
                                     <tbody>
-                                        <tr th:each="contacto, contador : ${contactos}">
-                                            <td>[[${contador.count}]]</td>
-                                            <td>[[${contacto.origen}]]</td>
-                                            <td th:text="${contacto.activo} ? 'Activa' : 'Inactiva'" />
+                                        <tr th:each="contacto : ${contacto}">
+                                            <td style="text-align: right">[[${contacto.idContacto}]]</td>
+                                            <td style="text-align: right">[[${contacto.nombre}]]</td>
+                                            <td style="text-align: right">[[${contacto.apellido}]]</td>
+                                            <td style="text-align: right">[[${contacto.email}]]</td>
+                                            <td style="text-align: right">[[${contacto.mensaje}]]</td>
+                                           
+                                           
                                             <td><a th:href="@{/contacto/eliminar/}+${contacto.idContacto}"
                                                    class="btn btn-danger">
                                                     <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a>
@@ -112,7 +113,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="text-center p-2" th:if="${contactos == null or contactos.empty}">
+                            <div class="text-center p-2" th:if="${contacto == null or contacto.empty}">
                                 <span>[[#{lista.vacia}]]</span>
                             </div>
                         </div>
@@ -151,44 +152,36 @@
                                             </div>
                                             <div class="card-body">
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{contacto.idContacto}]]</label>
+                                                    <label for="idContacto">[[#{contacto.idContacto}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="idContacto" th:field="*{idContacto}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{contacto.nombre}]]</label>
+                                                    <label for="nombre">[[#{contacto.nombre}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="nombre" th:field="*{nombre}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{contacto.segundoNombre}]]</label>
+                                                    <label for="apellido">[[#{contacto.apellido}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="apellido" th:field="*{apellido}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{contacto.email}]]</label>
+                                                    <label for="email">[[#{contacto.email}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="email" th:field="*{email}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{contacto.mensaje}]]</label>
+                                                    <label for="mensaje">[[#{contacto.mensaje}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="mensaje" th:field="*{mensaje}"
                                                            required="true">
                                                 </div>
-                                           
-                                                <div class="mb-3">
-                                                    <label for="activo">[[#{contacto.activo}]]</label>
-                                                    <input class="form-check-input" 
-                                                           type="checkbox" 
-                                                           name="activo" 
-                                                           id="activo"
-                                                           th:field="*{activo}">
-                                                </div>
+                                         
                                             </div>
                                         </div>
                                     </div>
