--- a/proyecto_06/src/main/resources/templates/Pago/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/Pago/fragmentos.html
@@ -44,30 +44,22 @@
                               method="POST" class="was-validated" enctype="multipart/form-data">
                             <div class="modal-body">
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{pagos.idPago}]]</label>
-                                    <input type="text" class="form-control" name="id_pago" required="true"/>
+                                    <label for="idPago">[[#{pagos.idPago}]]</label>
+                                    <input type="text" class="form-control" name="idPago" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{pagos.metodoPago}]]</label>
-                                    <input type="text" class="form-control" name="id_pago" required="true"/>
+                                    <label for="metodoPago">[[#{pagos.metodoPago}]]</label>
+                                    <input type="text" class="form-control" name="metodoPago" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{pagos.monto}]]</label>
-                                    <input type="text" class="form-control" name="id_pago" required="true"/>
+                                    <label for="monto">[[#{pagos.monto}]]</label>
+                                    <input type="text" class="form-control" name="monto" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{pagos.fechaPago}]]</label>
-                                    <input type="text" class="form-control" name="id_pago" required="true"/>
+                                    <label for="fechaPago">[[#{pagos.fechaPago}]]</label>
+                                    <input type="text" class="form-control" name="fechaPago" required="true"/>
                                 </div>
-                                <div class="mb-3">
-                                    <label for="imagen">[[#{pagos.rutaImagen}]]</label>
-                                    <input class="form-control" type="file" name="imagenFile" onchange="readURL(this);"/>
-                                    <img id="blah" src="#" alt="your image" height="200"/>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="activo">[[#{pagos.activo}]]</label>
-                                    <input class="form-check-input" type="checkbox" name="activo" id="activo"/>
-                                </div>
+                            
                             </div>
                             <div class="modal-footer">
                                 <button class="btn btn-primary" type="submit">Guardar</button>
@@ -79,7 +71,7 @@
         </section>
 
         <!-- 3 Sección principal para mostrar la informaccion de la entidad pagos -->
-        <section th:fragment="listadoPagos" id="reservas">
+        <section th:fragment="listadoPagos" id="pagos">
             <div class="container">
                 <div class="row">
                     <div class="col-md-9">
@@ -87,7 +79,7 @@
                             <div class="card-header">
                                 <h4>[[#{pagos.listado}]]</h4>
                             </div>
-                            <div th:if="${pagoss != null and !pagoss.empty}">
+                            <div th:if="${pagos != null and !pagos.empty}">
                                 <table class="table table-striped table-hover">
                                     <thead class="table-dark">
                                         <tr><th>#</th>
@@ -95,14 +87,17 @@
                                             <th>[[#{pagos.metodoPago}]]</th>
                                             <th>[[#{pagos.monto}]]</th>
                                             <th>[[#{pagos.fechaPago}]]</th>
-                                            <th>[[#{pagos.reserva.descripcion}]]</th>
+                                           
                                             <th></th></tr>
                                     </thead>
                                     <tbody>
-                                        <tr th:each="pagos, contador : ${pagoss}">
-                                            <td>[[${contador.count}]]</td>
-                                            <td>[[${pagos.origen}]]</td>
-                                            <td th:text="${pagos.activo} ? 'Activa' : 'Inactiva'" />
+                                        <tr th:each="pagos : ${pagos}">
+                                            <td>[[${pagos.idPago}]]</td>
+                                            <td>[[${pagos.reserva.idReserva}]]</td>
+                                            <td>[[${pagos.metodoPago}]]</td>
+                                            <td>[[${pagos.monto}]]</td>
+                                            <td>[[${pagos.fechaPago}]]</td>
+                                       
                                             <td><a th:href="@{/pagos/eliminar/}+${pagos.idPago}"
                                                    class="btn btn-danger">
                                                     <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a>
@@ -112,7 +107,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="text-center p-2" th:if="${pagoss == null or pagoss.empty}">
+                            <div class="text-center p-2" th:if="${pagos == null or pagos.empty}">
                                 <span>[[#{lista.vacia}]]</span>
                             </div>
                         </div>
@@ -151,44 +146,32 @@
                                             </div>
                                             <div class="card-body">
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{pagos.idPago}]]</label>
+                                                    <label for="idPago">[[#{pagos.idPago}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="idPago" th:field="*{idPago}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{pagos.metodoPago}]]</label>
+                                                    <label for="metodoPago">[[#{pagos.metodoPago}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="metodoPago" th:field="*{metodoPago}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{pagos.monto}]]</label>
+                                                    <label for="monto">[[#{pagos.monto}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="monto" th:field="*{monto}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{pagos.fechaPago}]]</label>
+                                                    <label for="fechaPago">[[#{pagos.fechaPago}]]</label>
                                                     <input type="text" class="form-control" 
-                                                           name="descripcion" th:field="*{descripcion}"
+                                                           name="fechaPago" th:field="*{fechaPago}"
                                                            required="true">
                                                 </div>
-                                                <div class="mb-3">
-                                                    <label for="imagen">[[#{pagos.rutaImagen}]]</label>
-                                                    <input class="form-control" type="file" name="imagenFile"
-                                                           onchange="readURL(this);" />
-                                                    <img id="blah" th:src="@{${pasajeros.rutaImagen}}" alt="your image" height="200"/>
-                                                </div>
+                                               
 
-                                                <div class="mb-3">
-                                                    <label for="activo">[[#{pagos.activo}]]</label>
-                                                    <input class="form-check-input" 
-                                                           type="checkbox" 
-                                                           name="activo" 
-                                                           id="activo"
-                                                           th:field="*{activo}">
-                                                </div>
+                                              
                                             </div>
                                         </div>
                                     </div>
@@ -209,7 +192,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 d-grid">                                
-                        <a th:href="@{/pagos/eliminar/}+${pagos.idPagos}"
+                        <a th:href="@{/pagos/eliminar/}+${pagos.idPago}"
                            class="btn btn-danger">
                             <i class="fas fa-trash"></i> [[#{accion.eliminar}]]
                         </a>
