--- a/proyecto_06/src/main/resources/templates/layout/plantilla.html
+++ b/proyecto_06/src/main/resources/templates/layout/plantilla.html
@@ -38,7 +38,7 @@
                                     <li><a class="dropdown-item"  th:href="@{/checkin/listado}">[[#{plantilla.checkin}]]</a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/´pago/listado}">[[#{plantilla.pagos}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/pagos/listado}">[[#{plantilla.pagos}]]</a></li>   
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
