--- a/proyecto_06/src/main/resources/templates/vuelos/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/vuelos/fragmentos.html
@@ -83,7 +83,7 @@
         </section>
 
         <!-- 3 Sección principal para mostrar la informaccion de la entidad vuelos -->
-        <section th:fragment="listadoVuelos" id="reservas">
+        <section th:fragment="listadoVuelos" id="vuelos">
             <div class="container">
                 <div class="row">
                     <div class="col-md-9">
@@ -91,7 +91,7 @@
                             <div class="card-header">
                                 <h4>[[#{vuelos.listado}]]</h4>
                             </div>
-                            <div th:if="${vueloss != null and !vueloss.empty}">
+                            <div th:if="${vuelos != null and !vuelos.empty}">
                                 <table class="table table-striped table-hover">
                                     <thead class="table-dark">
                                         <tr><th>#</th>
@@ -107,10 +107,14 @@
                                             <th></th></tr>
                                     </thead>
                                     <tbody>
-                                        <tr th:each="vuelos, contador : ${vueloss}">
-                                            <td>[[${contador.count}]]</td>
-                                            <td>[[${vuelos.origen}]]</td>
-                                            <td th:text="${vuelos.activo} ? 'Activa' : 'Inactiva'" />
+                                        <tr th:each="vuelos : ${vuelos}">
+                                            <td style="text-align: right">[[${vuelos.idVuelo}]]</td>
+                                            <td style="text-align: right">[[${vuelos.codigoVuelo}]]</td>
+                                            <td style="text-align: right">[[${vuelos.origen}]]</td>
+                                            <td style="text-align: right">[[${vuelos.destino}]]</td>
+                                            <td style="text-align: right">[[${vuelos.fechaSalida}]]</td>
+                                            <td style="text-align: right">[[${vuelos.fechaLlegada}]]</td>
+                                            <td style="text-align: right">[[${vuelos.precio}]]</td>
                                             <td><a th:href="@{/vuelos/eliminar/}+${vuelos.idVuelo}"
                                                    class="btn btn-danger">
                                                     <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a>
@@ -120,7 +124,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="text-center p-2" th:if="${vueloss == null or vueloss.empty}">
+                            <div class="text-center p-2" th:if="${vuelos == null or vuelos.empty}">
                                 <span>[[#{lista.vacia}]]</span>
                             </div>
                         </div>
@@ -193,15 +197,7 @@
                                                     <input type="text" class="form-control" 
                                                            name="fechaLlegada" th:field="*{fechaLlegada}"
                                                            required="true">
-                                                </div>
-                                                <div class="mb-3">
-                                                    <label for="activo">[[#{vuelos.activo}]]</label>
-                                                    <input class="form-check-input" 
-                                                           type="checkbox" 
-                                                           name="activo" 
-                                                           id="activo"
-                                                           th:field="*{activo}">
-                                                </div>
+                                                </div> 
                                             </div>
                                         </div>
                                     </div>
