--- a/proyecto_06/src/main/resources/templates/layout/plantilla.html
+++ b/proyecto_06/src/main/resources/templates/layout/plantilla.html
@@ -1,71 +1,64 @@
 
-<html xmlns="http//www.w3.org/1999/xhtml"
-      xmlns:th="http//ww.thymeleaf.org">
-    <head th:fragment="head">
-        <title>Practica06</title>
-        <meta charset="UTF-8"/> 
-        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
-        <script src="/js/rutinas.js" type="text/javascript"></script>
-        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-
-    </head>
-     
-
-    <body>
-        
-        <header th:fragment="header" class="header">
-            <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
-                <div class="container">
-                    <a th:href="@{/}" class="navbar-brand">[[#{aplicacion.titulo}]]</a>
-                    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <ul class="navbar-nav">
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/reserva/listado}">[[#{plantilla.reservas}]]</a></li>
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/vuelos/listado}">[[#{plantilla.vuelos}]]</a></li>                           
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" 
-                                   data-bs-toggle="dropdown" 
-                                   href="#" 
-                                   role="button" 
-                                   aria-expanded="false">[[#{plantilla.pasajeros}]]</a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item"  th:href="@{/contacto/listado}">[[#{plantilla.contacto}]]</a></li>
-                                    <li><a class="dropdown-item"  th:href="@{/checkin/listado}">[[#{plantilla.checkin}]]</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/pagos/listado}">[[#{plantilla.pagos}]]</a></li>   
-                        </ul>
-                        <ul class="navbar-nav">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">[[#{plantilla.idioma}]]</a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item"  th:href="@{/(lang=es)}">ES</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/(lang=en)}">EN</a></li>
-                                </ul>
-                            </li>
-                        </ul>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="head">
+    <title>Proyecto06</title>
+    <meta charset="UTF-8" />
+    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/Styles.css"/>
+    <script src="/js/rutinas.js" type="text/javascript"></script>
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+</head>
+<body>
+    
+    <header th:fragment="header" class="header">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
+            <div class="container">
+                <a th:href="@{/}" class="navbar-brand">[[#{aplicacion.titulo}]]</a>
+                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                    <ul class="navbar-nav">
+                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/reserva/listado}">[[#{plantilla.reservas}]]</a></li>
+                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/vuelos/listado}">[[#{plantilla.vuelos}]]</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">[[#{plantilla.pasajeros}]]</a>
+                            <ul class="dropdown-menu dropdown-menu-dark">
+                                <li><a class="dropdown-item" th:href="@{/contacto/listado}">[[#{plantilla.contacto}]]</a></li>
+                                <li><a class="dropdown-item" th:href="@{/checkin/listado}">[[#{plantilla.checkin}]]</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/pagos/listado}">[[#{plantilla.pagos}]]</a></li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">[[#{plantilla.idioma}]]</a>
+                            <ul class="dropdown-menu dropdown-menu-dark">
+                                <li><a class="dropdown-item" th:href="@{/(lang=es)}">ES</a></li>
+                                <li><a class="dropdown-item" th:href="@{/(lang=en)}">EN</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <section id="main-header" class="py-2 bg-success text-white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h1><i class="fas fa-cog"></i> [[#{plantilla.suTienda}]]</h1>
                     </div>
                 </div>
-            </nav>
-            <section id="main-header" class="py-2 bg-success text-white">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h1><i class="fas fa-cog"></i> [[#{plantilla.suTienda}]]</h1>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </header>
+            </div>
+        </section>
+    </header>       
 
-        <footer th:fragment="footer">
-            <h3>Este es el footer...</h3>
-        </footer>
-
-    </body>
+    <footer th:fragment="footer">
+        <h3>Este es el footer...</h3>
+    </footer>
+</body>
 </html>
