--- a/proyecto_06/src/main/resources/templates/Checkin/listado.html
+++ b/proyecto_06/src/main/resources/templates/Checkin/listado.html
@@ -6,7 +6,7 @@
     <head th:replace="~{layout/plantilla :: head}"
         <title>Proyecto06</title>
         <meta charset="UTF-8"/> 
-      
+        <link rel="stylesheet" href="css/Styles.css" />
     </head>
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
@@ -14,7 +14,7 @@
         <section th:replace="~{checkin/fragmentos :: botonesAgregar}"/>
         <section th:replace="~{checkin/fragmentos :: agregarCheckin}"/>
         <section th:replace="~{checkin/fragmentos :: listadoCheckin}"/>
-        
+        <div class="fondo d-flex justify-content-center align-items-center"></div>
         <footer th:replace="~{layout/plantilla :: footer}"/> 
        
     </body>
