--- a/proyecto_06/src/main/resources/templates/layout/plantilla.html
+++ b/proyecto_06/src/main/resources/templates/layout/plantilla.html
@@ -11,6 +11,7 @@
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    
 </head>
 <body>
     
@@ -46,7 +47,7 @@
                 </div>
             </div>
         </nav>
-        <section id="main-header" class="py-2 bg-success text-white">
+        <section id="main-header" class="py-2 bg-warning text-white">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
@@ -57,8 +58,12 @@
         </section>
     </header>       
 
-    <footer th:fragment="footer">
-        <h3>Este es el footer...</h3>
+    <footer th:fragment="footer" class="bg-dark text-white mt-5 p-2">
+          <div class="col">
+                <p class="lead text-center">
+                  &COPY; [[#{plantilla.derechos}]] 
+                </p>
+            </div>
     </footer>
 </body>
 </html>
