barra de busqueda

--- a/proyecto_06/src/main/resources/templates/index.html
+++ b/proyecto_06/src/main/resources/templates/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{layout/plantilla :: head}">
-    <meta charset="UTF-8" />
-    <title>Proyecto06</title>
-    <link rel="stylesheet" href="css/Styles.css" />
-</head>
-<body>
-    <header th:replace="~{layout/plantilla :: header}"></header>
-    
-    <section th:replace="~{pruebas/fragmentos :: tarjetas}"/>
-    <!-- <div class="fondo d-flex justify-content-center align-items-center"></div> -->
+    <head th:replace="~{layout/plantilla :: head}">
+        <meta charset="UTF-8" />
+        <title>Proyecto06</title>
+        <link rel="stylesheet" href="css/Styles.css" />
+    </head>
+    <body>
+        <header th:replace="~{layout/plantilla :: header}"></header>
+
+        <section th:replace="~{pruebas/fragmentos :: tarjetas}"/>
+
+        <div class="fondo d-flex justify-content-center align-items-center"></div> 
         
-    <footer th:replace="~{layout/plantilla :: footer}"></footer>
-</body>
+        <footer th:replace="~{layout/plantilla :: footer}"></footer>
+    </body>
 </html>
