--- a/proyecto_06/src/main/resources/templates/layout/plantilla.html
+++ b/proyecto_06/src/main/resources/templates/layout/plantilla.html
@@ -31,6 +31,8 @@
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/contacto/listado}">[[#{plantilla.contacto}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/checkin/listado}">[[#{plantilla.checkin}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/pagos/listado}">[[#{plantilla.pagos}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/paquetes/listado}">[[#{plantilla.paquetes}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categoria}]]</a></li>
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
