--- a/proyecto_06/src/main/resources/templates/paquetes/listado.html
+++ b/proyecto_06/src/main/resources/templates/paquetes/listado.html
@@ -13,7 +13,7 @@
         
         <section th:replace="~{paquetes/fragmentos :: botonesAgregar}"/> 
         <section th:replace="~{paquetes/fragmentos :: agregarPaquetes}"/>
-        <section th:replace="~{paquetes/fragmentos :: listadoPaquetess}"/>
+        <section th:replace="~{paquetes/fragmentos :: listadoPaquetes}"/>
         
         <footer th:replace="~{layout/plantilla :: footer}"/> 
        
