--- a/proyecto_06/src/main/resources/templates/layout/plantilla.html
+++ b/proyecto_06/src/main/resources/templates/layout/plantilla.html
@@ -44,33 +44,35 @@
                             </li>
                         </ul>
                         <ul class="navbar-nav" 
-                            sec:authorized="!isAuthenticated()">
+                            sec:authorize="!isAuthenticated()">
                             <li class="nav-item px-2">
                                 <a class="nav-menu-link nav-link"
-                                   th:href="@{/login}">
-                                    <i class="fas fa-right-to-bracket"> 
-                                    </i>
-                                </a>
+                                    th:href="@{/login}">
+                                    <i class="fas fa-right-to-bracket"></i>     
+                                </a> 
                             </li>
+                            
                         </ul>
                         
-                          <ul class="navbar-nav" 
-                            sec:authorized="isAuthenticated()">
+                        <ul class="navbar-nav"
+                            sec:authorize="isAuthenticated()">
                             <li class="nav-item text-white my-auto">
-                              <img th:src="@{${session.usuarioImagen}}"
-                                   class='rounded-circle'
-                                   height="40"
-                                   alt="alt"/>
-                                <span sec:authentication='name'>Jhon</span> 
+                                <img th:src="@{${session.usuarioImagen}}"
+                                     class="rounded-circle"
+                                     height="40"
+                                     alt="alt"/>
+                                <span sec:authentication="name">Jhon</span>
+                            </li>    
+                            <li class="nav-item text-white my-auto">
+                                <form method="post"
+                                    th:action="@{/logout}">
+                                    <button class="btn btn-white">
+                                        <i  class="fas fa-rigt-from-bracket"></i> 
+                                    </button>
+                                             
+                                </form>
                             </li>
-                              <li class="nav-item text-white my auto">
-                                 <form method="post"
-                                     th:action='@{/logout}'>
-                                     <button class='btn btn-dark'>
-                                         <i class="fas fa-right-from-bracket"></i>
-                                     </button>
-                                 </form>
-                                </li>
+                            
                         </ul>
                     </div>
                 </div>
