--- a/proyecto_06/src/main/resources/templates/paquetes/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/paquetes/fragmentos.html
@@ -111,7 +111,7 @@
         </section>
 
         <!-- 3 Sección principal para mostrar la informaccion de la entidad paquetes -->
-        <section th:fragment="listadoPaquetess" id="paquetess">
+        <section th:fragment="listadoPaquetes" id="paquetes">
             <div class="container">
                 <div class="row">
                     <div class="col-md-9">
@@ -119,7 +119,7 @@
                             <div class="card-header">
                                 <h4>[[#{paquetes.listado}]]</h4>
                             </div>
-                            <div th:if="${paquetess != null and !paquetess.empty}">
+                            <div th:if="${paquetes != null and !paquetes.empty}">
                                 <table class="table table-striped table-hover">
                                     <thead class="table-dark">
                                         <tr><th>#</th>
@@ -132,8 +132,8 @@
                                             <th></th></tr>
                                     </thead>
                                     <tbody>
-                                        <tr th:each="paquetes : ${paquetess}">
-                                            <td>[[${paquetes.idPaquetes}]]</td>
+                                        <tr th:each="paquetes : ${paquetes}">
+                                            <td>[[${paquetes.idPaquete}]]</td>
                                             <td>[[${paquetes.descripcion}]]</td>
                                             <td style="text-align: end">[[${paquetes.precio}]]</td>
                                             <td style="text-align: center">[[${paquetes.existencias}]]</td>
@@ -141,16 +141,16 @@
                                             <td>[[${paquetes.categoria.descripcion}]]</td>
                                             <td th:text="${paquetes.activo} ? 'Activa' : 'Inactiva'" />
                                             <td sec:authorize="hasRole('ROLE_ADMIN')">
-                                                <a th:href="@{/paquetes/eliminar/}+${paquetes.idPaquetes}"
+                                                <a th:href="@{/paquetes/eliminar/}+${paquetes.idPaquete}"
                                                    class="btn btn-danger">
                                                     <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a>
-                                                <a th:href="@{/paquetes/modificar/}+${paquetes.idPaquetes}"
+                                                <a th:href="@{/paquetes/modificar/}+${paquetes.idPaquete}"
                                                    class="btn btn-success">
                                                     <i class="fas fa-pencil"></i> [[#{accion.actualizar}]]</a></td></tr>
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="text-center p-2" th:if="${paquetess == null or paquetess.empty}">
+                            <div class="text-center p-2" th:if="${paquetes == null or paquetes.empty}">
                                 <span>[[#{lista.vacia}]]</span>
                             </div>
                         </div>
@@ -159,7 +159,7 @@
                         <div class="card text-center bg-success text-white mb-3">
                             <div class="card-body">
                                 <h3>[[#{paquetes.total}]]</h3>
-                                <h4 class="fs-2"><i class="fas fa-users"></i> [[${totalPaquetess}]]</h4>
+                                <h4 class="fs-2"><i class="fas fa-users"></i> [[${totalPaquetes}]]</h4>
                             </div>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
                           th:object="${paquetes}"
                           class="was-validated"                          
                           enctype="multipart/form-data">
-                        <input type="hidden" name="idPaquetes" th:field="*{idPaquetes}"/>
+                        <input type="hidden" name="idPaquete" th:field="*{idPaquete}"/>
                         <input type="hidden" name="rutaImagen" th:field="*{rutaImagen}"/>
                         <section th:replace="~{paquetes/fragmentos :: botonesEditar}"/>
                         <div id=details>
@@ -271,7 +271,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 d-grid">                                
-                        <a th:href="@{/paquetes/eliminar/}+${paquetes.idPaquetes}"
+                        <a th:href="@{/paquetes/eliminar/}+${paquetes.idPaquete}"
                            class="btn btn-danger">
                             <i class="fas fa-trash"></i> [[#{accion.eliminar}]]
                         </a>
