--- a/proyecto_06/src/main/resources/templates/paquetes/modifica.html
+++ b/proyecto_06/src/main/resources/templates/paquetes/modifica.html
@@ -11,7 +11,7 @@
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
         
-        <section th:replace="~{producto/fragmentos :: editarProducto}"/> 
+        <section th:replace="~{paquetes/fragmentos :: editarPaquetes}"/> 
         
         <footer th:replace="~{layout/plantilla :: footer}"/> 
        
